# tech-support

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/bot/: __init__.py
src/cogs/: owner.py  support.py
src/utils/: activity.py
techsupport/: __init__.py  __main__.py
techsupport/bot/: bot.py  config.py
techsupport/bot/cogs/: helper.py  owner.py  staff.py  support.py
techsupport/database/: database.py
techsupport/models/: __init__.py  ticket.py  ticket_emoji.py  ticket_state.py  ticket_store.py
techsupport/utils/: __init__.py  activity.py  checks.py  context.py  language.py  permissions.py
