[tool.poetry]
name = "tech-support"
version = "1.0.3"
description = "Discord bot for technical support"

license = "BSD-3-Clause"

authors = [

]

readme = 'README.md'

repository = "https://github.com/Carberra/tech-support"
homepage = "https://github.com/Carberra/tech-support"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
apscheduler = "^3.6.3"
discord = "^1.0.1"
python-dotenv = "^0.12.0"
aiofiles = "^0.5.0"
aiosqlite = "^0.13.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
